# Dionysus2.0

./: .env.example  .flake8  .git-commit-template.md  .gitignore  .pre-commit-config.yaml  ACCESS_FLUX.md  AGENTIC_KNOWLEDGE_GRAPH_COMPLETE.md  AGENT_CONSTITUTION.md  AGENT_COORDINATION_PROTOCOL.md  AGENT_STATUS_BOARD.md  AI_RESEARCHER_THOUGHTSEED_INTEGRATION_ARCHITECTURE.md  ARCHITECTURE.md  ARCHITECTURE_DIAGRAM.md  ASI_GO_2_INTEGRATION_PLAN.md  ATTRIBUTION.md  CLAUDE.md  CLAUSE_INTEGRATION_ANALYSIS.md  CLAUSE_PHASE2_READY.md  CLEAN_IMPLEMENTATION_SUMMARY.md  COMPLETE_PATTERN_LEARNING_SYNTHESIS.md  COMPLETE_SESSION_DOCUMENTATION.md  COMPLETE_SPEC_ROADMAP_FINAL.md  COMPLETE_SYSTEM_INTEGRATION_GUIDE.md  COMPREHENSIVE_PROJECT_DISCUSSION.md  COMPREHENSIVE_RESEARCH_SYSTEMS_COMPARISON.md  CONSCIOUSNESS_DATA_FLOW_ANALYSIS.md  CONSCIOUSNESS_UPLOAD_INTEGRATION.md  CONTEXT_ENGINEERING_INTEGRATION_SPEC.md  CURRENT_STATUS_AND_NEXT_STEPS.md  DIONYSUS_2_EVOLUTION_STRATEGY.md  DOCUMENT_PROCESSING_COMPARISON.md  Dockerfile.numpy2-binary  ENVIRONMENT_SETUP.md  EXTRACTION_SUMMARY.md  FLUX_CLAUSE_INTEGRATION.md  FLUX_FRONTEND_FIRST.md  FRONTEND_READINESS_STATUS.md  GLOBAL_WORKSPACE_THEORY_VALIDATION.md  GRAPH_CHANNEL_MIGRATION_QUICK_REFERENCE.md  HYBRID_STORAGE_ANALYSIS.md  (+103 more)
backend/: .flake8  .pre-commit-config.yaml  .ruff_constitutional_plugin.py  DEMO_INSTRUCTIONS.md  QUICK_START_SUMMARIZER.md  SPEC_055_AGENT_3_SUMMARY.md  START_FLUX.sh  TEST_POLICY.md  __init__.py  archimedes.py  demo_interface.html  demo_server.py  demo_summarizer.py  document_cognition_knowledge.json  enforce_no_skip_tests.py  inspect_last_upload.py  main.py  minimal_app.py  mypy.ini  observe_data_flow.py  playwright.config.ts  pyproject.toml  requirements.txt  run.sh  run_model_tests.py  run_tests.sh  start_backend.sh  test_autoschemakg_demo.py  test_complete_autoschemakg_integration.py  test_document_ingestion.py  test_five_level_demo.py  test_ingestion_direct.py  test_ollama_simple_integration.py  test_ollama_standalone.py  test_runner.py  test_simple_ollama.py  test_upload_consciousness.py
backend/backend/: pyproject.toml
backend/core/: __init__.py  config.py
backend/flux-backend-env/: pyvenv.cfg
backend/models/: __init__.py  autobiographical_journey.py  concept_node.py  curiosity.py  document.py  evaluation.py  event_node.py  thoughtseed_trace.py  user_profile.py  visualization.py
backend/scripts/: migrate_source_metadata.py
backend/services/: __init__.py  active_inference_service.py  affordance_context_service.py  consciousness_pipeline.py  ollama_service.py  thoughtseed_service.py
backend/services/enhanced_daedalus/: ai_mri_pattern_learning_integration.py  cognitive_meta_coordinator.py  cognitive_tools_implementation.py  cognitive_tools_mcp.py  meta_cognitive_integration.py  procedural_meta_learning_emo.py
backend/src/: app_factory.py  app_factory.py.bak  main.py  minimal_app.py
backend/src/api/: __init__.py
backend/src/config/: neo4j_config.py  settings.py
backend/src/legacy/: daedalus_audit.md
backend/src/middleware/: __init__.py  auth.py  validation.py
backend/src/models/: __init__.py  attractor_basin.py  autobiographical_journey.py  cognition_base.py  concept_node.py  curiosity_mission.py  document.py  document_artifact.py  document_node.py  document_relationships.py  document_source.py  evaluation_frame.py  event_node.py  research_pattern.py  thoughtseed_trace.py  thoughtseed_workspace.py  user_profile.py  visualization_state.py
backend/src/services/: autoschemakg_integration.py  claude_autobiographical_memory.py  consciousness_integration_pipeline.py  daedalus.py  database_health.py  document_analyst.py  document_chunker.py  document_cognition_base.py  document_ingestion.py  document_parser.py  document_processing_graph.py  document_repository.py  document_researcher.py  document_summarizer.py  domain_specialization.py  enhanced_meta_tot_active_inference.py  enhanced_thoughtseed_domains.py  five_level_concept_extraction.py  granular_chunking.py  iwmt_mac_consciousness_numpy.py  iwmt_mac_unified_consciousness.py  meta_learning_document_enhancer.py  multi_tier_memory.py  neo4j_schema_init.py  neo4j_searcher.py  query_engine.py  realtime_document_streaming.py  response_synthesizer.py  tier_manager.py  unified_document_processor.py  url_downloader.py  vector_searcher.py
backend/src/utils/: port_manager.py
backend/tests/: README.md  conftest.py  test_consciousness_pipeline.py  test_constitutional_compliance_spec054.py  test_context_engineering_basin.py  test_context_engineering_influence.py  test_context_engineering_redis.py  test_context_engineering_spec_pipeline.py  test_daedalus_spec_021.py  test_database_connections.py  test_database_health.py  test_document_summarizer.py  test_document_upload.py  test_minimal_backend.py  test_neo4j_storage.py  test_port_management.py  test_startup.py
backend/tests/contract/: conftest.py  test_architect_subgraph_contract.py  test_attractors_get.py  test_basin_get_contract.py  test_basin_strengthen_contract.py  test_batch_results_get.py  test_batch_status_get.py  test_context_basins_get.py  test_coordinator_contract.py  test_curator_contract.py  test_curiosity_api.py  test_curiosity_missions.py  test_documents_bulk_post.py  test_documents_detail_get.py  test_documents_list_get.py  test_documents_persist_post.py  test_documents_post.py  test_documents_process_post.py  test_documents_tier_put.py  test_edge_score_contract.py  test_hybrid_search_post.py  test_knowledge_search_post.py  test_navigator_contract.py  test_neural_fields_get.py  test_query_api_post.py  test_query_response_schema.py  test_research_patterns_get.py  test_research_query_post.py  test_thoughtseed_workspace_get.py  test_thoughtseeds_get.py  test_url_ingestion.py  test_visualization_ws.py  test_websocket_progress.py
backend/tests/governance/: __init__.py  test_constitutional_compliance.py
backend/tests/integration/: test_architect_workflow.py  test_attractor_dynamics.py  test_autoschemakg_document_processing.py  (+22 more)
backend/uploads/: doc_646113357879_test_climate_change.txt
(+392 files in other folders)
